--- a/seanmcbeth.com/Pages/Index.cshtml
+++ b/seanmcbeth.com/Pages/Index.cshtml
@@ -16,8 +16,7 @@
             ("Contact", "Contact", "#contact", true),
             ("Bio", "Bio", "#bio", true),
             (".com", "Projects", "#projects", false),
-            (".net", "Talks and Interviews", "#talks", false),
-            ("etc/", "Extras", "/other", false)
+            (".net", "Talks and Interviews", "#talks", false)
         })
         {
             <li class="@(hide?"hidden":null)">
