--- a/seanmcbeth.com/Pages/Other.cshtml
+++ b/seanmcbeth.com/Pages/Other.cshtml
@@ -10,8 +10,7 @@
             (".net", "Profiles", "#profiles"),
             (".io", "Demos", "#demos"),
             (".com", "Projects", "#projects"),
-            (".tv", "Press", "#press"),
-            ("home/", "Home", "/")
+            (".tv", "Press", "#press")
         })
     {
         <li>
